--- a/vignettes/Vignette.Rmd
+++ b/vignettes/Vignette.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Multiple effect estimation of chemicals in Environmental Epidemiology"
-author: "Ibon Tamayo-Uria, Youssef Oulhote & Marie-Abèle Bind"
+author: "Ibon Tamayo-Uria, Marie-Abèle Bind & Youssef Oulhote"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -15,45 +15,53 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 ```
-# Introduction
+## Introduction
 
 Although the general population is exposed to multiple chemicals, most environmental epidemiology studies consider each chemical separately when estimating the adverse effects of environmental exposures, partly because of the lack of software accessible to environmental epidemiologists. 
 
-# Objective: 
+## Objective: 
 
 We developed a statistical R package, accessible to environmental health scientists that can provide valid estimates for effects of environmental contaminants, dose-response relationships, and interactions in a multi-pollutant setting. 
 
-# Methods: 
+## Methods: 
 
 This package implements the work of Oulhote et al (2017) that combines the G-formula, a maximum likelihood estimator, with the ensemble learning technique Super Learner. It incorporates a wide range of statistical techniques (e.g. generalized linear and additive models, random forest, extreme gradient boosting) to estimate and provide valid inference in multi-pollutant settings and reconstruct dose-response relationships non-parametrically. 
 
-# Results: 
+## Results: 
 
 This package will facilitate multi-pollutant analysis of environmental epidemiology. We also developed a user-friendly Shiny application that can be used by biomedical researchers modeling complex mixtures. We ran multiple simulations based on real scenarios and the proposed method yielded promising results across all the scenarios. Our approach was also able to estimate the true underlying structure of the data. We will present a tutorial describing the package functions and visualizations to illustrate our developed methods. 
 
-# Conclusion: 
+## Conclusion: 
 
 This package will help to unravel the effects of chemical mixtures and their interactions in epidemiological studies. 
 
-# Reference:
+## Reference:
 
 Youssef Oulhote, Marie-Abele Bind, Brent Coull, Chirag, Patel, Philippe Grandjean. 2017. Combining Ensemble Learning Techniques and G-Computation to Investigate Chemical Mixtures in Environmental Epidemiology Studies. Biorxiv. https://www.biorxiv.org/content/early/2017/06/30/147413.article-info
 
-
-## Installation
-
-You can install the released version of expose from www.github.com with:
-
-``` r
-library(devtools)
- devtools::install_github("itamuria/expose")
-```
 
 ## Case study
 
 This is a basic case study similar to the analysed on the paper. 
 
-``` r
+### Installation
+
+You can install the CRAN version or the released version of expose from www.github.com with:
+
+```{r}
+# install.packages("expose")
+
+# library(devtools)
+# devtools::install_github("itamuria/expose")
+
+```
+
+
+### Load package and data
+
+The data can be loaded from github or can be found in the package dataset. 
+
+```{r}
 rm(list = ls())
 time_doc1 <- Sys.time()
 
@@ -68,9 +76,12 @@ pacman::p_load(ggplot2, repmis,RColorBrewer,SuperLearner, gam,splines,foreach,gl
 # Download data
 source_data("https://github.com/itamuria/expose_dataset/blob/master/20180818_dtaset.RData?raw=true")
 set.seed(22222)
+```
 
-# Define parameters
 
+### Define parameters
+
+```{r}
 N <- dim(dtaset)[1]
 seku <- seq(0,1,0.05)   #c(0,0.1,0.2,0.25,0.3,0.4,0.5,0.6,0.7,0.75,0.8,0.9,1)
 our.num.sim <- 5
@@ -79,19 +90,14 @@ delta=c(1,0)
 
 Exposures<- c("Var1","Var2","Var3","Var4","Var5")
 Confounders<- c("sex")
+```
 
 
-###############################################################################################################
-# Crossvalidation
-###############################################################################################################
+### Crossvalidation
 
+```{r}
 ourlibraries <- c("SL.glm", "SL.glm.interaction","SL.glmnet", "SL.gam","SL.nnet",
                   "SL.polymars","SL.svm","SL.xgboost")
-
-
-
-
-Outcome 4
 Outcome <- c("Y4")
 m4 <- SuperLearner::CV.SuperLearner(Y = dtaset[,Outcome[1]],
                                    X = dtaset[, c(Confounders,Exposures)],V=10, SL.library = ourlibraries,
@@ -99,26 +105,26 @@ m4 <- SuperLearner::CV.SuperLearner(Y = dtaset[,Outcome[1]],
                                    verbose = FALSE)
 
 mm <- m4$AllSL[[1]]
+```
 
-###############################################################################################################
-# create basic data frame
-###############################################################################################################
 
+### create basic data frame
+
+```{r}
 Outcome <- c("Y4")
 
 gen <- general_function (dataset = dtaset, exposures = Exposures,
                          confounders = Confounders,
                          outcomes = Outcome[1], delta=delta, dr = seku)
 
-
 summary_table_lines <- gen[[2]]
+```
 
 
 
-###############################################################################################################
-# Simulations
-###############################################################################################################
+### Simulations
 
+```{r}
 t1 <- Sys.time()
 simu <- run_simulations (dataset = dtaset, exposures = Exposures,
                           confounders = Confounders, libraries = ourlibraries,
@@ -130,14 +136,12 @@ t2 <- Sys.time()
 (t2-t1)
 
 h <- 4
-
-###############################################################################################################
-# Sensibility analysis
-###############################################################################################################
+```
 
 
-################################# risk
+### Sensibility analysis: risk
 
+```{r}
 ris <- simu[[2]]
 
 len_sim <- dim(ris)[2]
@@ -169,10 +173,13 @@ ggsave(file_exp_name)
 ris_table <- data.frame(lib,apply(ris[,-1],1,mean))
 names(ris_table)<-c("Library","Performance")
 knitr::kable(ris_table)
+```
 
 
-################################# Coefficient
 
+### Sensibility analysis: Coefficient
+
+```{r}
 coef <- simu[[3]]
 
 coef_table <- data.frame(lib,apply(coef[,-1],1,mean))
@@ -196,13 +203,12 @@ ggplot(df1, aes(x = Library, y = Value, fill = Library)) + geom_boxplot() + them
 file_exp_name <- paste0("Y",h,"_Coefficient.jpg")
 
 ggsave(file_exp_name)
+```
 
 
-###############################################################################################################
-# Naive ACE: Average causal effect
-###############################################################################################################
+### Naive ACE: Average causal effect
 
-
+```{r}
 ace.df.g <- naive_ace (allsim = simu[[1]], dataset = dtaset, ic_dis = "IC", st = summary_table_lines,
                        exposures = Exposures, delta = delta)
 
@@ -221,12 +227,11 @@ ggplot(ace.df.g, aes(x=Group, y=Mean, colour=Group)) +
 file_exp_name <- paste0("Y",h,"_NaiveAce.jpg")
 
 ggsave(file_exp_name)
+```
 
-###############################################################################################################
-# Dose Response
-###############################################################################################################
+### Dose Response
 
-
+```{r}
 drr.grp <- dose_resp (allsim = simu[[1]], dataset = dtaset, st = summary_table_lines,
                      dr = seku, exposures = Exposures) 
 
@@ -254,11 +259,12 @@ ggplot(drr.grp, aes(x=dose, y=Mean)) +
 file_exp_name <- paste0("Y",h,"_DoseResponse2.jpg")
 
 ggsave(file_exp_name)
+```
 
 
-###############################################################################################################
-# ice: individual conditional expectation
-###############################################################################################################
+### ice: individual conditional expectation
+
+```{r}
 
 ice_res <- ice(allsim = simu[[1]], dataset = dtaset, dr = seku, squem = summary_table_lines, remove_extrem = FALSE)
 
@@ -302,7 +308,7 @@ file_exp_name <- paste0("Y",h,"_ICE_4.jpg")
 
 ggsave(file_exp_name)
 
-# discrete variables
+### discrete variables
 
 p=ggplot(ice_res,aes(X, Var3_pred,group=id,col=sex)) + labs(x="pp-Var3 percentiles",y="Predicted Y")
 p+geom_line()+theme_bw()+scale_color_gradientn(name="Sex",colours=c("red","#FFFF00")) +
@@ -313,12 +319,13 @@ p+geom_line()+theme_bw()+scale_color_gradientn(name="Sex",colours=c("red","#FFFF
 file_exp_name <- paste0("Y",h,"_ICE_5.jpg")
 
 ggsave(file_exp_name)
-
-###############################################################################################################
-# Interactions
-###############################################################################################################
+```
 
 
+
+### Interactions
+
+```{r}
 it <- interact (allsim = simu[[1]], dataset = dtaset,exposures = Exposures,
                       confounders = c("sex"), squem = summary_table_lines)
 
@@ -340,5 +347,6 @@ ggsave(file_exp_name)
 time_doc3 <- Sys.time()
 
 print(time_doc3 - time_doc1)
-
 ```
+
+
